--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BackEnd para o desafio Sharenergy",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sadrak Santiago Morais",
